--- a/000-default.conf
+++ b/000-default.conf
@@ -9,4 +9,6 @@
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    ServerName localhost
 </VirtualHost>
