--- a/000-default.conf
+++ b/000-default.conf
@@ -5,6 +5,8 @@
     <Directory /var/www/html/public>
         AllowOverride All
         Require all granted
+        Options Indexes FollowSymLinks
+        DirectoryIndex index.php index.html
     </Directory>
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
