--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+      "dev": "npm run development",
+      "development": "mix",
+      "watch": "mix watch",
+      "watch-poll": "mix watch -- --watch-options-poll=1000",
+      "hot": "mix watch --hot",
+      "prod": "npm run production",
+      "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-vue": "^4.6.2",
-        "autoprefixer": "^10.4.19",
-        "axios": "^1.6.4",
-        "bootstrap": "^5.2.3",
-        "laravel-vite-plugin": "^1.0.0",
-        "postcss": "^8.4.40",
-        "sass": "^1.56.1",
-        "tailwindcss": "^3.4.7",
-        "vite": "^5.0.0",
-        "vue": "^3.2.37"
+      "autoprefixer": "^10.4.14",
+      "axios": "^1.4.0",
+      "laravel-mix": "^6.0.49",
+      "lodash": "^4.17.21",
+      "postcss": "^8.4.26",
+      "postcss-loader": "^6.2.1",
+      "resolve-url-loader": "^5.0.0",
+      "sass": "^1.58.0",
+      "sass-loader": "^13.2.2",
+      "tailwindcss": "^3.2.7",
+      "vue": "^3.2.49",
+      "vue-loader": "^17.2.2"
+    },
+    "dependencies": {
+      "vue-router": "^4.1.5",
+      "vuex": "^4.0.2"
     }
-}
+  }
+  
